New plugin version 0.0.2

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "rules": {
     "space-before-function-paren": [2, { "named": "never" }],
     "no-shadow-restricted-names":  [2],
