--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,8 @@
-.gitignore
-
+test/
 node_modules/
 npm-debug.log
-
-test/
-.travis.yml
-
 gulpfile.js
+.gitignore
+.editorconfig
+.eslintrc
+.travis.yml
