--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-andalusian-stylesheets",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "PostCSS plugin for writing Andalusian Stylesheets.",
   "keywords": [
     "postcss",
@@ -11,6 +11,7 @@
   ],
   "author": "David Barragán Merino <bameda@dbarragan.com>",
   "license": "MIT",
+  "main": "dist/index.js",
   "repository": "bameda/postcss-andalusian-stylesheets",
   "bugs": {
     "url": "https://github.com/bameda/postcss-andalusian-stylesheets/issues"
@@ -20,12 +21,17 @@
     "postcss": "^5.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.2.0",
-    "gulp": "^3.9.0",
+    "del": "^2.2.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-cli": "github:gulpjs/gulp-cli#4.0",
     "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3"
   },
   "scripts": {
-    "test": "gulp"
+    "test": "gulp build"
   }
 }
