--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: false
 language: node_js
-
 node_js:
-  - node
-  - iojs
-  - "4.1"
-  - "4.0"
+  - "node"
+  - "iojs"
+  - "6"
+  - "5"
+  - "4"
   - "0.12"
