--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-andalusian-stylesheets",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "PostCSS plugin for writing Andalusian Stylesheets.",
   "keywords": [
     "postcss",
@@ -18,19 +18,61 @@
   },
   "homepage": "https://github.com/bameda/postcss-andalusian-stylesheets",
   "dependencies": {
-    "postcss": "^5.0.2"
+    "npm": "^7.5.4"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.6",
-    "babel-preset-es2015": "^6.3.13",
-    "chai": "^3.2.0",
-    "del": "^2.2.0",
+    "@babel/preset-env": "^7.12.16",
+    "@jacobq/gulp-jest": "^4.0.3-PR65",
+    "@logux/eslint-config": "^44.1.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "del": "^6.0.0",
+    "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-let": "^1.1.0",
+    "eslint-plugin-prettierx": "^0.17.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-unicorn": "^28.0.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^6.1.1",
-    "gulp-eslint": "^1.0.0",
-    "gulp-mocha": "^2.1.3"
-  },
-  "scripts": {
-    "test": "gulp build"
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^6.0.0",
+    "jest-cli": "^26.6.3",
+    "postcss": "^8.2.6"
+ },
+ "peerDependencies": {
+   "postcss": "^8.2.6"
+ },
+ "scripts": {
+   "test": "gulp build"
+ },
+ "babel": {
+   "presets": [
+     [
+       "@babel/preset-env",
+       {
+         "targets": {
+           "node": "current"
+         }
+       }
+     ]
+   ]
+ },
+ "eslintConfig": {
+   "extends": "@logux/eslint-config",
+   "env": {
+     "jest": true,
+     "node": true
+   }
+ },
+ "jest": {
+   "testEnvironment": "node",
+   "verbose": true,
+   "transformIgnorePatterns": [
+     "<rootDir>/node_modules/"
+   ],
+   "automock": false
   }
 }
